fixed bugs on the tags, put a scroll bar auto to contain the overflowing hashtags

--- a/eventful/src/MapListing/EventDetailsPage/style.css
+++ b/eventful/src/MapListing/EventDetailsPage/style.css
@@ -32,3 +32,10 @@ i {
     border: 1px solid rgb(194, 194, 194);
     color: rgb(71, 65, 85);
 }
+
+.tagContainer {
+    overflow-x: auto;
+    height: 3rem;
+    width: 100%;
+    scrollbar-width: none !important;
+}
