--- a/eventful/src/MapListing/style.css
+++ b/eventful/src/MapListing/style.css
@@ -35,7 +35,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 7px;
+  width: 5px;
 }
 
 /* Track */
